Fix issue with images being cropped, add padding

--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,9 +1,9 @@
 .movie-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   width: 20%;
-  margin: 10px;
+  margin: 15px 10px;
   background-color: white;
   border-radius: 25px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -20,10 +20,17 @@
 
 .rating-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   max-width: 30%;
   margin: auto;
   margin-bottom: 10px;
+}
+
+.movie-rating {
+  font-weight: bold;
+  padding-left: 5px;
+  font-size: 20px;
 }
 
 .movie-icon {
@@ -33,5 +40,6 @@
 
 .movie-card:hover {
   cursor: pointer;
-  width: 20.5%
+  /* width: 20.5% */
+  transform: scale(1.05);
 }
